--- a/Atlas.Reporting.UI/Client/wwwroot/index.html
+++ b/Atlas.Reporting.UI/Client/wwwroot/index.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Atlas.Reporting.UI.Client.styles.css" rel="stylesheet" />
-    <link href="/_content/PSC.Blazor.Components.DataTable/css/DataTable.css" rel="stylesheet" />
+<!--    <link href="/_content/PSC.Blazor.Components.DataTable/css/DataTable.css" rel="stylesheet" />-->
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <!--Refer theme style sheet as below if you are using Syncfusion.Blazor Single NuGet-->
     <!--<link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />-->
 </head>
@@ -23,7 +24,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="/_content/PSC.Blazor.Components.DataTable/js/DataTable.js"></script>
+<!--    <script src="/_content/PSC.Blazor.Components.DataTable/js/DataTable.js"></script>-->
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
